--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4765,7 +4765,7 @@ textarea.form-control.is-invalid {
   border-radius: 0.25rem;
   border-width: 1px;
   --tw-border-opacity: 1;
-  border-color: rgb(54 26 2 / var(--tw-border-opacity));
+  border-color: rgb(75 77 79 / var(--tw-border-opacity));
   background-color: transparent;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -4773,7 +4773,7 @@ textarea.form-control.is-invalid {
   padding-right: 2.5rem;
   font-weight: 500;
   --tw-text-opacity: 1;
-  color: rgb(54 26 2 / var(--tw-text-opacity));
+  color: rgb(75 77 79 / var(--tw-text-opacity));
 }
 
 .btn-box:hover {
@@ -4803,7 +4803,7 @@ textarea.form-control.is-invalid {
   line-height: 2.5rem;
   font-weight: 700;
   --tw-text-opacity: 1;
-  color: rgb(54 26 2 / var(--tw-text-opacity));
+  color: rgb(75 77 79 / var(--tw-text-opacity));
 }
 
 .text-h3 {
@@ -4812,7 +4812,7 @@ textarea.form-control.is-invalid {
   line-height: 2.25rem;
   font-weight: 800;
   --tw-text-opacity: 1;
-  color: rgb(54 26 2 / var(--tw-text-opacity));
+  color: rgb(75 77 79 / var(--tw-text-opacity));
 }
 
 .text-p {
@@ -4902,6 +4902,11 @@ textarea.form-control.is-invalid {
 
 .m-0 {
   margin: 0px;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .mt-24 {
@@ -4996,26 +5001,6 @@ textarea.form-control.is-invalid {
   height: 1rem;
 }
 
-.h-10 {
-  height: 2.5rem;
-}
-
-.h-60 {
-  height: 15rem;
-}
-
-.h-96 {
-  height: 24rem;
-}
-
-.h-8 {
-  height: 2rem;
-}
-
-.h-80 {
-  height: 20rem;
-}
-
 .w-screen {
   width: 100vw;
 }
@@ -5024,8 +5009,8 @@ textarea.form-control.is-invalid {
   width: 100%;
 }
 
-.w-64 {
-  width: 16rem;
+.w-48 {
+  width: 12rem;
 }
 
 .w-72 {
@@ -5058,12 +5043,20 @@ textarea.form-control.is-invalid {
   width: 14rem;
 }
 
+.w-14 {
+  width: 3.5rem;
+}
+
 .w-80 {
   width: 20rem;
 }
 
 .w-6 {
   width: 1.5rem;
+}
+
+.w-64 {
+  width: 16rem;
 }
 
 .w-1\/2 {
@@ -5074,20 +5067,8 @@ textarea.form-control.is-invalid {
   width: 1rem;
 }
 
-.w-1 {
-  width: 0.25rem;
-}
-
-.w-14 {
-  width: 3.5rem;
-}
-
 .w-40 {
   width: 10rem;
-}
-
-.w-48 {
-  width: 12rem;
 }
 
 .max-w-\[1550px\] {
@@ -5177,6 +5158,10 @@ textarea.form-control.is-invalid {
 
 .flex-wrap {
   flex-wrap: wrap;
+}
+
+.content-center {
+  align-content: center;
 }
 
 .content-between {
@@ -5353,7 +5338,7 @@ textarea.form-control.is-invalid {
 
 .bg-foxBrown {
   --tw-bg-opacity: 1;
-  background-color: rgb(54 26 2 / var(--tw-bg-opacity));
+  background-color: rgb(75 77 79 / var(--tw-bg-opacity));
 }
 
 .bg-amber-400 {
@@ -5387,6 +5372,14 @@ textarea.form-control.is-invalid {
 
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
+}
+
+.bg-opacity-100 {
+  --tw-bg-opacity: 1;
+}
+
+.bg-opacity-10 {
+  --tw-bg-opacity: 0.1;
 }
 
 .bg-heroImg-mobile {
@@ -5438,10 +5431,6 @@ textarea.form-control.is-invalid {
   padding: 0px;
 }
 
-.p-3 {
-  padding: 0.75rem;
-}
-
 .p-4 {
   padding: 1rem;
 }
@@ -5452,10 +5441,6 @@ textarea.form-control.is-invalid {
 
 .p-1 {
   padding: 0.25rem;
-}
-
-.p-5 {
-  padding: 1.25rem;
 }
 
 .px-8 {
@@ -5568,6 +5553,22 @@ textarea.form-control.is-invalid {
   padding-bottom: 0.25rem;
 }
 
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+
+.pt-10 {
+  padding-top: 2.5rem;
+}
+
+.pt-5 {
+  padding-top: 1.25rem;
+}
+
+.pb-5 {
+  padding-bottom: 1.25rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -5606,6 +5607,11 @@ textarea.form-control.is-invalid {
   line-height: 1.25rem;
 }
 
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
+}
+
 .font-normal {
   font-weight: 400;
 }
@@ -5640,7 +5646,7 @@ textarea.form-control.is-invalid {
 
 .text-foxBrown {
   --tw-text-opacity: 1;
-  color: rgb(54 26 2 / var(--tw-text-opacity));
+  color: rgb(75 77 79 / var(--tw-text-opacity));
 }
 
 .text-amber-500 {
@@ -5648,14 +5654,14 @@ textarea.form-control.is-invalid {
   color: rgb(245 158 11 / var(--tw-text-opacity));
 }
 
-.text-gray-500 {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 .text-gray-900 {
@@ -5668,12 +5674,29 @@ textarea.form-control.is-invalid {
   color: rgb(28 100 242 / var(--tw-text-opacity));
 }
 
+.text-darkcolor-light {
+  --tw-text-opacity: 1;
+  color: rgb(45 48 49 / var(--tw-text-opacity));
+}
+
 .opacity-0 {
   opacity: 0;
 }
 
 .opacity-100 {
   opacity: 1;
+}
+
+.opacity-30 {
+  opacity: 0.3;
+}
+
+.opacity-20 {
+  opacity: 0.2;
+}
+
+.opacity-10 {
+  opacity: 0.1;
 }
 
 .shadow-lg {
@@ -5747,11 +5770,6 @@ textarea.form-control.is-invalid {
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-gray-50:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-gray-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -5770,11 +5788,6 @@ textarea.form-control.is-invalid {
 .hover\:text-amber-500:hover {
   --tw-text-opacity: 1;
   color: rgb(245 158 11 / var(--tw-text-opacity));
-}
-
-.hover\:text-gray-700:hover {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
 .hover\:text-gray-900:hover {
@@ -5799,6 +5812,18 @@ textarea.form-control.is-invalid {
 .hover\:shadow-lg:hover {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:shadow:hover {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:shadow-md:hover {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -5834,11 +5859,6 @@ textarea.form-control.is-invalid {
   --tw-ring-color: rgb(164 202 254 / var(--tw-ring-opacity));
 }
 
-.active\:bg-gray-50:active {
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
-}
-
 .dark .dark\:block {
   display: block;
 }
@@ -5849,33 +5869,16 @@ textarea.form-control.is-invalid {
 
 .dark .dark\:divide-foxBrown > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-opacity: 1;
-  border-color: rgb(54 26 2 / var(--tw-divide-opacity));
-}
-
-.dark .dark\:divide-opacity-30 > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-opacity: 0.3;
-}
-
-.dark .dark\:divide-opacity-50 > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-opacity: 0.5;
+  border-color: rgb(75 77 79 / var(--tw-divide-opacity));
 }
 
 .dark .dark\:divide-opacity-90 > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-opacity: 0.9;
 }
 
-.dark .dark\:border {
-  border-width: 1px;
-}
-
-.dark .dark\:border-gray-800 {
-  --tw-border-opacity: 1;
-  border-color: rgb(31 41 55 / var(--tw-border-opacity));
-}
-
 .dark .dark\:border-foxBrown {
   --tw-border-opacity: 1;
-  border-color: rgb(54 26 2 / var(--tw-border-opacity));
+  border-color: rgb(75 77 79 / var(--tw-border-opacity));
 }
 
 .dark .dark\:border-gray-600 {
@@ -5897,30 +5900,13 @@ textarea.form-control.is-invalid {
   border-color: rgb(55 65 81 / var(--tw-border-opacity));
 }
 
-.dark .dark\:border-darkcolor-light {
-  --tw-border-opacity: 1;
-  border-color: rgb(34 16 1 / var(--tw-border-opacity));
-}
-
-.dark .dark\:border-opacity-30 {
-  --tw-border-opacity: 0.3;
-}
-
-.dark .dark\:border-opacity-50 {
-  --tw-border-opacity: 0.5;
-}
-
-.dark .dark\:border-opacity-80 {
-  --tw-border-opacity: 0.8;
-}
-
 .dark .dark\:border-opacity-90 {
   --tw-border-opacity: 0.9;
 }
 
 .dark .dark\:bg-darkcolor {
   --tw-bg-opacity: 1;
-  background-color: rgb(14 7 1 / var(--tw-bg-opacity));
+  background-color: rgb(15 18 20 / var(--tw-bg-opacity));
 }
 
 .dark .dark\:bg-gray-800 {
@@ -5930,12 +5916,7 @@ textarea.form-control.is-invalid {
 
 .dark .dark\:bg-darkcolor-light {
   --tw-bg-opacity: 1;
-  background-color: rgb(34 16 1 / var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-gray-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+  background-color: rgb(45 48 49 / var(--tw-bg-opacity));
 }
 
 .dark .dark\:bg-gray-300 {
@@ -5962,17 +5943,12 @@ textarea.form-control.is-invalid {
   background-color: rgb(31 41 55 / 0.5);
 }
 
-.dark .dark\:bg-foxBrown {
-  --tw-bg-opacity: 1;
-  background-color: rgb(54 26 2 / var(--tw-bg-opacity));
+.dark .dark\:bg-opacity-30 {
+  --tw-bg-opacity: 0.3;
 }
 
 .dark .dark\:bg-opacity-80 {
   --tw-bg-opacity: 0.8;
-}
-
-.dark .dark\:bg-opacity-30 {
-  --tw-bg-opacity: 0.3;
 }
 
 .dark .dark\:text-gray-300 {
@@ -5983,11 +5959,6 @@ textarea.form-control.is-invalid {
 .dark .dark\:text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.dark .dark\:text-gray-200 {
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
 .dark .dark\:text-gray-400 {
@@ -6002,17 +5973,7 @@ textarea.form-control.is-invalid {
 
 .dark .dark\:hover\:bg-foxBrown:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(54 26 2 / var(--tw-bg-opacity));
-}
-
-.dark .dark\:hover\:bg-gray-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}
-
-.dark .dark\:hover\:bg-gray-800:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+  background-color: rgb(75 77 79 / var(--tw-bg-opacity));
 }
 
 .dark .dark\:hover\:bg-gray-600:hover {
@@ -6023,6 +5984,11 @@ textarea.form-control.is-invalid {
 .dark .dark\:hover\:bg-blue-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(26 86 219 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:hover\:bg-gray-800:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
 .dark .dark\:hover\:text-white:hover {
@@ -6040,88 +6006,70 @@ textarea.form-control.is-invalid {
   color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
+.dark .dark\:hover\:placeholder-opacity-10:hover::-moz-placeholder {
+  --tw-placeholder-opacity: 0.1;
+}
+
+.dark .dark\:hover\:placeholder-opacity-10:hover::placeholder {
+  --tw-placeholder-opacity: 0.1;
+}
+
+.dark .dark\:hover\:shadow:hover {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .dark .dark\:hover\:shadow-black:hover {
   --tw-shadow-color: #000000;
   --tw-shadow: var(--tw-shadow-colored);
 }
 
+.dark .dark\:hover\:shadow-darkcolor-light:hover {
+  --tw-shadow-color: #2d3031;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.dark .dark\:hover\:shadow-darkcolor:hover {
+  --tw-shadow-color: #0F1214;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.dark .dark\:hover\:shadow-zinc-800:hover {
+  --tw-shadow-color: #27272a;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.dark .dark\:hover\:shadow-zinc-900:hover {
+  --tw-shadow-color: #18181b;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.dark .dark\:hover\:shadow-\[\#090b0d\]:hover {
+  --tw-shadow-color: #090b0d;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.dark .dark\:hover\:shadow-\[\#0b0e0f\]:hover {
+  --tw-shadow-color: #0b0e0f;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.dark .dark\:hover\:backdrop-opacity-25:hover {
+  --tw-backdrop-opacity: opacity(0.25);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
+
+.dark .dark\:hover\:backdrop-opacity-10:hover {
+  --tw-backdrop-opacity: opacity(0.1);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
+
 @media (min-width: 640px) {
-  .tablet\:h-40 {
-    height: 10rem;
-  }
-
-  .tablet\:h-2 {
-    height: 0.5rem;
-  }
-
-  .tablet\:h-24 {
-    height: 6rem;
-  }
-
-  .tablet\:h-1 {
-    height: 0.25rem;
-  }
-
-  .tablet\:h-14 {
-    height: 3.5rem;
-  }
-
-  .tablet\:h-28 {
-    height: 7rem;
-  }
-
-  .tablet\:h-6 {
-    height: 1.5rem;
-  }
-
-  .tablet\:h-60 {
-    height: 15rem;
-  }
-
-  .tablet\:h-8 {
-    height: 2rem;
-  }
-
-  .tablet\:h-80 {
-    height: 20rem;
-  }
-
-  .tablet\:h-9 {
-    height: 2.25rem;
-  }
-
-  .tablet\:h-96 {
-    height: 24rem;
-  }
-
-  .tablet\:h-fit {
-    height: -webkit-fit-content;
-    height: -moz-fit-content;
-    height: fit-content;
-  }
-
-  .tablet\:h-\[\] {
-    height: ;
-  }
-
-  .tablet\:h-\[30rem\] {
-    height: 30rem;
-  }
-
   .tablet\:h-auto {
     height: auto;
-  }
-
-  .tablet\:max-h-80 {
-    max-height: 20rem;
-  }
-
-  .tablet\:max-h-96 {
-    max-height: 24rem;
-  }
-
-  .tablet\:max-h-\[\] {
-    max-height: ;
   }
 
   .tablet\:max-h-\[30rem\] {
@@ -6134,14 +6082,6 @@ textarea.form-control.is-invalid {
 
   .tablet\:w-96 {
     width: 24rem;
-  }
-
-  .tablet\:w-56 {
-    width: 14rem;
-  }
-
-  .tablet\:w-11 {
-    width: 2.75rem;
   }
 
   .tablet\:flex-row {
@@ -6199,7 +6139,7 @@ textarea.form-control.is-invalid {
     line-height: 2.5rem;
     font-weight: 700;
     --tw-text-opacity: 1;
-    color: rgb(54 26 2 / var(--tw-text-opacity));
+    color: rgb(75 77 79 / var(--tw-text-opacity));
   }
 
   .laptop\:relative {
@@ -6311,7 +6251,7 @@ textarea.form-control.is-invalid {
 
   .laptop\:border-foxBrown {
     --tw-border-opacity: 1;
-    border-color: rgb(54 26 2 / var(--tw-border-opacity));
+    border-color: rgb(75 77 79 / var(--tw-border-opacity));
   }
 
   .laptop\:bg-heroImg {
@@ -6363,7 +6303,7 @@ textarea.form-control.is-invalid {
 
   .laptop\:text-foxBrown {
     --tw-text-opacity: 1;
-    color: rgb(54 26 2 / var(--tw-text-opacity));
+    color: rgb(75 77 79 / var(--tw-text-opacity));
   }
 
   .laptop\:text-amber-500 {
@@ -6373,20 +6313,16 @@ textarea.form-control.is-invalid {
 }
 
 @media (min-width: 1280px) {
+  .desktop\:w-64 {
+    width: 16rem;
+  }
+
   .desktop\:w-5\/12 {
     width: 41.666667%;
   }
 
   .desktop\:w-auto {
     width: auto;
-  }
-
-  .desktop\:w-11 {
-    width: 2.75rem;
-  }
-
-  .desktop\:w-64 {
-    width: 16rem;
   }
 
   .desktop\:justify-center {
