--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5077,6 +5077,34 @@ textarea.form-control.is-invalid {
   width: 1rem;
 }
 
+.w-28 {
+  width: 7rem;
+}
+
+.w-36 {
+  width: 9rem;
+}
+
+.w-40 {
+  width: 10rem;
+}
+
+.w-96 {
+  width: 24rem;
+}
+
+.w-52 {
+  width: 13rem;
+}
+
+.w-3 {
+  width: 0.75rem;
+}
+
+.w-32 {
+  width: 8rem;
+}
+
 .max-w-\[1550px\] {
   max-width: 1550px;
 }
@@ -6155,6 +6183,10 @@ textarea.form-control.is-invalid {
 
   .laptop\:w-1\/3 {
     width: 33.333333%;
+  }
+
+  .laptop\:w-full {
+    width: 100%;
   }
 
   .laptop\:translate-x-0 {
